--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 repositories {
     maven { url 'https://maven.fabric.io/public' }
+    google()
+    jcenter()
 }
 
 apply plugin: 'checkstyle'
@@ -93,8 +95,8 @@ dependencies {
     compile 'com.android.support:gridlayout-v7:24.2.1'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    compile 'com.jakewharton:butterknife:8.4.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     compile ('com.github.franmontiel:PersistentCookieJar:v0.9.3') {
         exclude module: 'com.square'
@@ -119,16 +121,26 @@ dependencies {
     androidTestCompile ('com.android.support.test:rules:0.3') {
         exclude module: 'support-annotations'
     }
-    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2') {
+    androidTestCompile('com.android.support.test.espresso:espresso-contrib:3.0.1') {
         // Necessary to avoid version conflicts
         exclude group: 'com.android.support', module: 'appcompat'
         exclude group: 'com.android.support', module: 'support-v4'
         exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'design'
         exclude module: 'recyclerview-v7'
     }
-    androidTestCompile ('com.android.support.test.espresso:espresso-core:2.2') {
+    androidTestCompile ('com.android.support.test.espresso:espresso-core:3.0.1') {
         exclude module: 'support-annotations'
     }
+    androidTestCompile ('com.android.support.test.espresso:espresso-web:3.0.1') {
+        // Necessary to avoid version conflicts
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'design'
+        exclude module: 'recyclerview-v7'
+    }
+
     checkstyle('com.puppycrawl.tools:checkstyle:6.19')
     pmd(
             'net.sourceforge.pmd:pmd-core:5.4.1',
