--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ apply plugin: 'pmd'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.danielme.muspyforandroid"
@@ -87,35 +87,35 @@ task pmd(type: Pmd) {
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:customtabs:24.2.1'
-    compile 'com.android.support:gridlayout-v7:24.2.1'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.jakewharton:butterknife:8.4.0'
+    implementation 'com.android.support:appcompat-v7:24.2.1'
+    implementation 'com.android.support:design:24.2.1'
+    implementation 'com.android.support:customtabs:24.2.1'
+    implementation 'com.android.support:gridlayout-v7:24.2.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-    compile ('com.github.franmontiel:PersistentCookieJar:v0.9.3') {
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    implementation ('com.github.franmontiel:PersistentCookieJar:v0.9.3') {
         exclude module: 'com.square'
     }
-    compile 'com.android.support:support-annotations:24.2.1'
-    compile 'com.github.bumptech.glide:glide:3.8.0'
-    compile 'com.android.support:support-v4:24.2.1'
-    compile group: 'org.jsoup', name: 'jsoup', version: '1.8.3'
-    compile 'com.scottyab:secure-preferences-lib:0.1.4'
-    compile 'com.google.dagger:dagger:2.14.1'
+    implementation 'com.android.support:support-annotations:24.2.1'
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'com.android.support:support-v4:24.2.1'
+    implementation group: 'org.jsoup', name: 'jsoup', version: '1.8.3'
+    implementation 'com.scottyab:secure-preferences-lib:0.1.4'
+    implementation 'com.google.dagger:dagger:2.14.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+    implementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true
     }
     dependencies {
         implementation 'uk.co.samuelwall:material-tap-target-prompt:2.7.0'
     }
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'junit:junit:4.12'
     androidTestCompile ('com.android.support.test:runner:0.3') {
